@@ -1,0 +1,25 @@
+# Generated by Django 3.2.18 on 2023-06-02 15:15
+
+import authentication.user_portal.models
+import bson.objectid
+from django.db import migrations, models
+import djongo.models.fields
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('authentication', '0018_auto_20220614_1336'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='userauthentication',
+            name='auth_cookie_name',
+            field=models.TextField(
+                help_text="Name of the cookie used to keep the portal session, overrides the Cluster's portal_cookie_name value",
+                verbose_name='Session cookie name',
+                null=False,
+                blank=True),
+        ),
+    ]
