@@ -204,6 +204,17 @@
                             </div>
                           </div>
                         </div> <!-- /.row -->
+                        <div class="row external">
+                          <div class="col-md-12">
+                            <div class="form-group">
+                            <label class="col-sm-4 control-label">{{ form.auth_cookie_name.label }}</label>
+                            <div class="col-sm-5">
+                              {{form.auth_cookie_name}}
+                              {{form.auth_cookie_name.errors|safe}}
+                            </div>
+                            </div>
+                          </div>
+                        </div> <!-- /.row -->
                         <div class="row">
                           <div class="col-md-12">
                             <div class="form-group">
