@@ -320,7 +320,7 @@ class POSTAuthentication(Authentication):
                                                 captcha=captcha,
                                                 error=kwargs.get('error', ""))
 
-        portal_cookie_name = kwargs.get('portal_cookie_name', None)
+        portal_cookie_name = self.workflow.authentication.auth_cookie_name or kwargs.get('portal_cookie_name', None)
         if portal_cookie_name:
             response.set_cookie(portal_cookie_name, self.redis_portal_session.key,
                                 domain=self.get_redirect_url_domain(), httponly=True,
@@ -342,7 +342,7 @@ class BASICAuthentication(Authentication):
     def ask_credentials_response(self, **kwargs):
         response = basic_authentication_response(self.workflow.name)
 
-        portal_cookie_name = kwargs.get('portal_cookie_name', None)
+        portal_cookie_name = self.workflow.authentication.auth_cookie_name or kwargs.get('portal_cookie_name', None)
         if portal_cookie_name:
             response.set_cookie(portal_cookie_name, self.redis_portal_session.key,
                                 domain=self.get_redirect_url_domain(), httponly=True,
@@ -401,7 +401,7 @@ class KERBEROSAuthentication(Authentication):
     def ask_credentials_response(self, **kwargs):
         response = kerberos_authentication_response()
 
-        portal_cookie_name = kwargs.get('portal_cookie_name', None)
+        portal_cookie_name = self.workflow.authentication.auth_cookie_name or kwargs.get('portal_cookie_name', None)
         if portal_cookie_name:
             response.set_cookie(portal_cookie_name, self.redis_portal_session.key,
                                 domain=self.get_redirect_url_domain(), httponly=True,
