@@ -4,6 +4,11 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [Unreleased]
+### Changed
+- [PORTAL] [IDP] Define a new custom cookie name for IDP portal sessions
+
+
 ## [2.7.0] - 2023-05-24
 ### Added
 - [API_PARSER] New API parser CISCO DUO
